add update check

--- a/VkDiag/VkDiag.csproj
+++ b/VkDiag/VkDiag.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
   <ItemGroup>
