--- a/VkDiag/VkDiag.csproj
+++ b/VkDiag/VkDiag.csproj
@@ -2,31 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net10.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System.Management" />
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="ILRepack" Version="2.0.44" GeneratePathProperty="true">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.242">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Mono.Options" Version="6.12.0.148" />
-    <PackageReference Include="System.Memory" Version="4.6.3" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
-    <PackageReference Include="System.Text.Json" Version="10.0.0" />
+    <PackageReference Include="WmiLight" Version="6.16.0" />
   </ItemGroup>
-
-  <Target Name="MergeLibs" AfterTargets="Build" Condition="'$(Configuration)'=='Release'">
-    <Exec Command="&quot;$(PkgILRepack)\tools\ILRepack.exe&quot; /targetplatform:v4 /wildcards /out:Packed\$(TargetFileName) $(TargetFileName) *.dll" ConsoleToMSBuild="true" WorkingDirectory="$(TargetDir)" />
-  </Target>
   
 </Project>
